[gd_scene load_steps=3 format=3 uid="uid://d1e5lgthdfb6k"]

[ext_resource type="Script" uid="uid://b5m11kflkrm5x" path="res://Globals/tooltip.gd" id="1_gghw2"]
[ext_resource type="Texture2D" uid="uid://deu3iyrmwwioh" path="res://Assets/gui_assets/tooltip.png" id="2_eni05"]

[node name="Popups" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 328.0
offset_bottom = 200.0
script = ExtResource("1_gghw2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="Tooltip" type="NinePatchRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
z_index = 4
texture_filter = 1
custom_minimum_size = Vector2(320, 192)
offset_right = 328.0
offset_bottom = 243.0
texture = ExtResource("2_eni05")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="M" type="MarginContainer" parent="CanvasLayer/Tooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="V" type="VBoxContainer" parent="CanvasLayer/Tooltip/M"]
layout_mode = 2

[node name="Item_Name" type="Label" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.40256286, 0.3119798, 0.18273428, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.79607844)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 20
text = "<item name>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item_Slot" type="Label" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.7865306, 0.5584052, 0.49387288, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.79607844)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_font_sizes/font_size = 18
text = "<item name>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stat1" type="HBoxContainer" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2

[node name="Stat" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat1"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "test"

[node name="Diff" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "test"
horizontal_alignment = 2

[node name="Stat2" type="HBoxContainer" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2

[node name="Stat" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2

[node name="Diff" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 2

[node name="Stat3" type="HBoxContainer" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2

[node name="Stat" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2

[node name="Diff" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 2

[node name="Stat4" type="HBoxContainer" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2

[node name="Stat" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat4"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2

[node name="Diff" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat4"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 2

[node name="Stat5" type="HBoxContainer" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2

[node name="Stat" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat5"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2

[node name="Diff" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat5"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 2

[node name="Stat6" type="HBoxContainer" parent="CanvasLayer/Tooltip/M/V"]
layout_mode = 2

[node name="Stat" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat6"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2

[node name="Diff" type="Label" parent="CanvasLayer/Tooltip/M/V/Stat6"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.7850271, 0.7349965, 0.6009196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
horizontal_alignment = 2
